fixing tag container on mobile

--- a/less/styles.less
+++ b/less/styles.less
@@ -202,6 +202,7 @@ body {
 
 		.tag-container {
 			margin-bottom: 5px;
+			word-wrap: break-word;
 			.size-font(0.85);
 
 			>a {
